--- a/docs/docs.css
+++ b/docs/docs.css
@@ -137,7 +137,7 @@ button, .button, #copy-path {
 
 .sidebar {
     background: var(--sidebar-bg);
-    border-right: 1px solid var(--border-color);
+    /* border-right: 1px solid var(--border-color); */
 }
 
 .sidebar-crate h2 a {
